# libical

./: CMakeLists.txt  ReleaseNotes.txt  config.h.cmake  libical.pc.in
cmake/modules/: FindBDB.cmake  FindGLIB2.cmake  FindGObjectIntrospection.cmake  FindLibXML2.cmake
doc/reference/libical-glib/: libical-glib-docs.sgml.in
examples/: CMakeLists.txt
src/java/: CMakeLists.txt
src/libical/: CMakeLists.txt  icalversion.h.cmake
src/libical-glib/: CMakeLists.txt  libical-glib.pc.in
src/libicalss/: CMakeLists.txt
src/libicalvcal/: CMakeLists.txt
src/python/: CMakeLists.txt
src/test/: CMakeLists.txt  icalrecur_test.c
